modify swagger
